[gd_scene load_steps=3 format=2]

[ext_resource path="res://weapons/Gun.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]

resource_name = "fire"
length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:light_energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 16.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer3D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Gun" type="Spatial" index="0"]

script = ExtResource( 1 )
dmg = 5.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="0"]

stream = null
attenuation_model = 0
unit_db = 0.0
unit_size = 1.0
max_db = 6.0
pitch_scale = 1.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0

[node name="RayCast" type="RayCast" parent="." index="1"]

enabled = true
exclude_parent = true
cast_to = Vector3( 0, 0, -500 )
collision_mask = 1

[node name="ActiveTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="CooldownTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="MuzzleFlash" type="OmniLight" parent="." index="4"]

layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 16.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 0
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
omni_range = 5.0
omni_attenuation = 1.0
omni_shadow_mode = 1
omni_shadow_detail = 1
_sections_unfolded = [ "Light", "Omni" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fire = SubResource( 1 )
blend_times = [  ]

[connection signal="timeout" from="ActiveTimer" to="." method="_on_ActiveTimer_timeout"]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]


